Fixed bug with conflict of 'version' variable in system and in pro files. Fixed appearance of attribute tables especially with paragraphs in the attribute cells. Added property descriptions to keywords of getProperty, setProperty, and init if they didn't already have a comments associated with them.

--- a/idldoc/src/templates/footer.tt
+++ b/idldoc/src/templates/footer.tt
@@ -2,7 +2,7 @@
 
   <table class="smaller">
     <tr>
-      <td class="left">Produced by IDLdoc [% version %] on [% date %]</td>
+      <td class="left">Produced by IDLdoc [% idldoc_version %] on [% date %]</td>
       <td class="right">Report bugs to: <a href="mailto:idldoc@idlddev.com">idldoc@idldev.com</a></td>
     </tr>
   </table>
