--- a/idldoc/src/templates/footer.tt
+++ b/idldoc/src/templates/footer.tt
@@ -3,7 +3,7 @@
   <table class="smaller">
     <tr>
       <td class="left">Produced by IDLdoc [% idldoc_version %] on [% date %]</td>
-      <td class="right">Report bugs to: <a href="mailto:idldoc@idlddev.com">idldoc@idldev.com</a></td>
+      <td class="right"><a href="http://idldev.com/idldoc">For updates, feature requests, and bug reports</a></td>
     </tr>
   </table>
 
