--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -2,6 +2,7 @@
 body { font-family: Helvetica, sans-serif; font-size: 10pt; margin: 0; padding: 0; }
 div.content { padding: 1em; }
 p { line-height: 1.2; }
+img { border: 0; }
 
 /* link styles */
 a { text-decoration: none; }
