--- a/idldoc/src/templates/help.tt
+++ b/idldoc/src/templates/help.tt
@@ -40,125 +40,141 @@
     		
     		<p>A typical call to IDLdoc is: <code class="listing">IDL> idldoc, root='~/projects/mylib', output='~/projects/mylib-docs'</code> This searches for .pro and .sav files in subdirectories of '~/projects/mylib' and places the output in '~/projects/mylib-docs'. The starting page for the output will be '~/projects/mylib-docs/index.html'.</p>
 
+  			<div class="note">
+  			  <p>Note: IDLdoc 3.0 copies source code into the output directory, so placing the output directory in your !PATH can cause IDL to choose a (possibly outdated) copy in the docs over the correct source file. It is recommended to either place your docs outside your !PATH or use the NOSOURCE keyword.</p>
+  			</div>
+  			
 			<p>There are quite a few keywords to IDLdoc to set various specifications for the output. Further customization can be done through the templates (described in the <a href="#customizing">"Producing customized output"</a> section).</p>
-			
-			<p>Note: IDLdoc 3.0 copies source code into the output directory, so placing the output directory in your !PATH can cause IDL to choose a (possibly outdated) copy in the docs over the correct source file. It is recommended to either place your docs outside your !PATH or use the NOSOURCE keyword.</p>
 				
 			<table class="small">
-		    <tr>
-		      <td class="name">ROOT</td>
-		      <td>root of directory hierarchy to document</td>
-		    </tr>
+			  <thead>
+			    <tr>
+			      <td>Keyword</td>
+			      <td>Description</td>
+			    </tr>
+			  </thead>
+			  
+			  <tbody>  
+  		    <tr>
+  		      <td class="name">ROOT</td>
+  		      <td>root of directory hierarchy to document; this is the only required keyword</td>
+  		    </tr>
 
-		    <tr>
-		      <td class="name">OUTPUT</td>
-		      <td>directory to place output</td>
-		    </tr>
+  		    <tr>
+  		      <td class="name">OUTPUT</td>
+  		      <td>directory to place output; if not present, output will be placed in the ROOT directory</td>
+  		    </tr>
 
-		    <tr>
-		      <td class="name">QUIET</td>
-		      <td>if set, don't print info messages, only print warnings and errors</td>
-		    </tr>
+  		    <tr>
+  		      <td class="name">TITLE</td>
+  		      <td>title of docs</td>
+  		    </tr>
+
+  		    <tr>
+  		      <td class="name">SUBTITLE</td>
+  		      <td>subtitle for docs</td>
+  		    </tr>
+  		    	    
+  		    <tr>
+  		      <td class="name">EMBED</td>
+  		      <td>embed CSS stylesheet instead of linking to it (useful for documentation where individual pages must stand by themselves)</td>
+  		    </tr>
 	    
-		    <tr>
-		      <td class="name">N_WARNINGS</td>
-		      <td>set to a named variable to return the number of warnings for the</td>
-		    </tr>			    
+  		    <tr>
+  		      <td class="name">OVERVIEW</td>
+  		      <td>filename of overview text and directory information</td>
+  		    </tr>
+
+  		    <tr>
+  		      <td class="name">FOOTER</td>
+  		      <td>filename of file to insert into the bottom of each page of docs</td>
+  		    </tr>
+
+  		    <tr>
+  		      <td class="name">NONAVBAR</td>
+  		      <td>set to not display the navbar</td>
+  		    </tr>
+
+  		    <tr>
+  		      <td class="name">NOSOURCE</td>
+  		      <td>set to not put source code into output</td>
+  		    </tr>
+
+  		    <tr>
+  		      <td class="name">USER</td>
+  		      <td>set to generate user-level docs (private parameters, files are not shown); the default is developer-level docs showing files and parameters</td>
+  		    </tr>
+
+  		    <tr>
+  		      <td class="name">STATISTICS</td>
+  		      <td>set to generate complexity statistics for routines</td>
+  		    </tr>
+
+  		    <tr>
+  		      <td class="name">QUIET</td>
+  		      <td>if set, don't print info messages, only print warnings and errors</td>
+  		    </tr>
+
+  		    <tr>
+  		      <td class="name">SILENT</td>
+  		      <td>if set, don't print any messages</td>
+  		    </tr>
+
+  		    <tr>
+  		      <td class="name">FORMAT_STYLE</td>
+  		      <td>style to use to parse file and routine comments ("idl", "idldoc", "verbatim", or "rst"); default is "idldoc"</td>
+  		    </tr>
+
+  		    <tr>
+  		      <td class="name">MARKUP_STYLE</td>
+  		      <td>markup used in comments ("rst" or "verbatim"); default is "verbatim"</td>
+  		    </tr>	
 	    
-		    <tr>
-		      <td class="name">ERROR</td>
-		      <td>set to a named variable to return the error state of the IDLdoc call; 0 indicates no error, anything else is an error</td>
-		    </tr>
+  		    <tr>
+  		      <td class="name">COMMENT_STYLE</td>
+  		      <td>output format for comments ("html", "rst", or "latex"); default is "html"</td>
+  		    </tr>			    
+
+  		    <tr>
+  		      <td class="name">TEMPLATE_PREFIX</td>
+  		      <td>prefix for template's names</td>
+  		    </tr>
 	    
-		    <tr>
-		      <td class="name">LOG_FILE</td>
-		      <td>if present, send messages to this filename instead of stdout</td>
-		    </tr>			    			  
+  		    <tr>
+  		      <td class="name">TEMPLATE_LOCATION</td>
+  		      <td>set to directory to find templates in</td>
+  		    </tr>
 
-		    <tr>
-		      <td class="name">EMBED</td>
-		      <td>embed CSS stylesheet instead of linking to it (useful for documentation where individual pages must stand by themselves)</td>
-		    </tr>
-	    
-		    <tr>
-		      <td class="name">OVERVIEW</td>
-		      <td>filename of overview text and directory information</td>
-		    </tr>
+  		    <tr>
+  		      <td class="name">ERROR</td>
+  		      <td>set to a named variable to return the error state of the IDLdoc call; 0 indicates no error, anything else is an error</td>
+  		    </tr>
 
-		    <tr>
-		      <td class="name">FOOTER</td>
-		      <td>filename of file to insert into the bottom of each page of docs</td>
-		    </tr>
-
-		    <tr>
-		      <td class="name">TITLE</td>
-		      <td>title of docs</td>
-		    </tr>
-
-		    <tr>
-		      <td class="name">SUBTITLE</td>
-		      <td>subtitle for docs</td>
-		    </tr>
-
-		    <tr>
-		      <td class="name">NONAVBAR</td>
-		      <td>set to not display the navbar</td>
-		    </tr>
-
-		    <tr>
-		      <td class="name">NOSOURCE</td>
-		      <td>don't put source code into output</td>
-		    </tr>
-
-		    <tr>
-		      <td class="name">USER</td>
-		      <td>set to generate user-level docs (private parameters, files are not shown); the default is developer-level docs showing files and parameters</td>
-		    </tr>
-
-		    <tr>
-		      <td class="name">STATISTICS</td>
-		      <td>generate complexity statistics for routines</td>
-		    </tr>
-
-		    <tr>
-		      <td class="name">FORMAT_STYLE</td>
-		      <td>style to use to parse file and routine comments ("idl", "idldoc", "verbatim", or "rst"); default is "idldoc"</td>
-		    </tr>
-
-		    <tr>
-		      <td class="name">MARKUP_STYLE</td>
-		      <td>markup used in comments ("rst" or "verbatim"); default is "verbatim"</td>
-		    </tr>	
-	    
-		    <tr>
-		      <td class="name">COMMENT_STYLE</td>
-		      <td>output format for comments ("html", "rst", or "latex"); default is "html"</td>
-		    </tr>			    
-
-		    <tr>
-		      <td class="name">TEMPLATE_PREFIX</td>
-		      <td>prefix for template's names</td>
-		    </tr>
-	    
-		    <tr>
-		      <td class="name">TEMPLATE_LOCATION</td>
-		      <td>set to directory to find templates in</td>
-		    </tr>
-
-		    <tr>
-		      <td class="name">ASSISTANT</td>
-		      <td>obsolete; no longer used</td>
-		    </tr>
+  		    <tr>
+  		      <td class="name">N_WARNINGS</td>
+  		      <td>set to a named variable to return the number of warnings for the</td>
+  		    </tr>
+  		    	    
+  		    <tr>
+  		      <td class="name">LOG_FILE</td>
+  		      <td>if present, send messages to this filename instead of stdout</td>
+  		    </tr>
+  		    
+  		    <tr>
+  		      <td class="name">ASSISTANT</td>
+  		      <td>obsolete; no longer used</td>
+  		    </tr>
 	    			    			    			    
-		    <tr>
-		      <td class="name">PREFORMAT</td>
-		      <td>obsolete; no longer used</td>
-		    </tr>	
+  		    <tr>
+  		      <td class="name">PREFORMAT</td>
+  		      <td>obsolete; no longer used</td>
+  		    </tr>	
 			    
-		    <tr>
-		      <td class="name">BROWSE_ROUTINES</td>
-		      <td>obsolete; no longer used</td>
-		    </tr>			    		    		    
+  		    <tr>
+  		      <td class="name">BROWSE_ROUTINES</td>
+  		      <td>obsolete; no longer used</td>
+  		    </tr>			    		    		    
+  		  </tbody>
       </table>
       				    
     	</div>
@@ -169,7 +185,7 @@
     	
     	  <p>Parsing of comments is handled by two different parsers: the format parser and the markup parser. The format parser breaks down the comment block into sections (i.e. finds the tags), handles attributes of tags that allow them, and then hands off the parsing of text comments to the markup parser (i.e. the description of a file, routine, parameter or other text in tags).</p>
     	  
-    	  <p>IDLdoc now accepts three different styles of commenting: IDLdoc style (the only style available in IDLdoc 2.0), the traditional IDL provided comment template, or a new restructured text style. The style to use can be specified with the FORMAT_STYLE keyword to IDLdoc (as a global setting for the run) or on each individual file with a "docformat" comment. Furthermore, a markup style which specifies how to parse comment blocks can also be set. The two markup styles are: verbatim (the only markup style in IDLdoc 2.0) or a restructured text style. The markup styles are specified via the MARKUP_STYLE keyword to IDLdoc or using a "docformat" comment.</p> 
+    	  <p>IDLdoc now accepts three different styles of commenting: IDLdoc style (the only style available in IDLdoc 2.0), the traditional IDL provided comment template, or a new restructured text style. The style to use can be specified with the FORMAT_STYLE keyword to IDLdoc (as a global setting for the run) or on each individual file with a "docformat" comment. Furthermore, a markup style which specifies how to parse comment blocks can also be set. The two markup styles are: verbatim (the only markup style in IDLdoc 2.0) or a restructured text style (they are described in the <a href="#markup-styles">"Markup styles"</a> section). The markup styles are specified via the MARKUP_STYLE keyword to IDLdoc or using a "docformat" comment.</p> 
     		
     	  <p>For example, for the below file sets it format parser to be "idldoc" and its markup parser to be "verbatim": <code class="listing">; docformat = 'idldoc verbatim'
 
@@ -199,7 +215,7 @@ end</code></p>
     		
     		<h3>IDLdoc format</h3>
     		
-    		<p>Tags are prefixed with an "@" sign. Tag names are case-insensitive. They must be the first non-whitespace character after the comment symbol ";" on a line. Arguments follow the tags after whitespace. Attributes are enclosed curly braces "{}".</p>
+    		<p>Tags are prefixed with an "@" sign. Tag names are case-insensitive. For a list of all the tags, see the <a href="#tags">"Tags for IDL and rst formats"</a> section. They must be the first non-whitespace character after the comment symbol ";" on a line. Arguments follow the tags after whitespace. Attributes are enclosed curly braces "{}".</p>
     		
     		<p>For example, a tag with no arguments appears like: <code class="listing">; @abstract</code> Tags with an argument: <code class="listing">; @returns string/strarr</code> Tags with attributes appear like: <code class="listing">; @param x {in}{required}{type=fltarr} independent variable
 ; @param y {in}{required}{type=fltarr} dependent variable</code></p>
@@ -207,7 +223,7 @@ end</code></p>
     		
     		<h3>IDL format</h3>
     		
-    		<p>The standard IDL format is given below. The individual headers are described in the "Headers in IDL format" section. <code class="listing">;+
+    		<p>The standard IDL format is given below. The individual headers are described in the <a href="#idl-headers">"Headers in IDL format"</a> section. <code class="listing">;+
 ; NAME:
 ;	ROUTINE_NAME
 ;
@@ -301,22 +317,32 @@ end</code></p>
     		
     		<h3>Restructured text format</h3>
     		
-    		<p>Tags must be the first non-whitespace character on the line. Tag names are case-insensitive. For tags with arguments, the arguments/attributes must be on the same line. Indentation is significant (spaces only&mdash;no tabs!); for tags with multiple arguments, each argument must be consistently indented at least two spaces. Attributes are separated from the argument by a ":" and from each other with commas. Comments for the argument must be further consistently indented at least two more spaces.</p>
+    		<p>Tags must be the first non-whitespace character on the line. Tag names are case-insensitive. For a list of all the tags, see the <a href="#tags">"Tags for IDL and rst formats"</a> section. For tags with arguments, the arguments/attributes must be on the same line. Indentation is significant (spaces only&mdash;no tabs!); for tags with multiple arguments, each argument must be consistently indented at least two spaces. Attributes are separated from the argument by a ":" and from each other with commas. Comments for the argument must be further consistently indented at least two more spaces.</p>
     		
     		<p>Tags with no arguments: <code class="listing">; :Abstract:</code> or with an argument <code class="listing">; :Returns: string/strarr</code> or arguments with attributes: <code class="listing">; :Params:
 ;    x : in, required, type=fltarr 
 ;       independent variable
 ;    y : in, required, type=fltarr
 ;       dependent variable</code></p>
+
+        <p>For attributes with values that contain comments, either escape the comma with a "\" or enclose the value with double quotes. For example, <code class="listing">; :Params:
+;    fwd : out, optional, type=fltarr(2\, nSegments)
+;       streamline in the forward direction
+;    bwd : out, optional, type="fltarr(2, nSegments)"
+;       streamline in the backward direction</code></p>
+        
       </div>
+
       
       <div id="tags">
         <h2>Tags for IDLdoc and rst formats</h2>
       
-        <p>Tags describe a particular aspect of the file or routine they are associated with.</p>
-        
-        <p>Slight differences across formats: singular/plural tags names vs individual/sections.</p>
-        
+        <p>Tags describe a particular aspect of the file or routine. There are slight differences in how the tags work between the IDLdoc and rst formats: some IDLdoc tags are singular and used repeatedly while their rst counterparts are plural but used only once. For example, in IDLdoc: <code class="listing">; @param x {in}{required}{type=fltarr} independent variable
+; @param y {in}{required}{type=fltarr} dependent variable</code> In rst this would be: <code class="listing">; :Params:
+;    x : in, required, type=fltarr 
+;       independent variable
+;    y : in, required, type=fltarr
+;       dependent variable</code></p>
         
         <h3>File tags</h3>
 
@@ -399,6 +425,8 @@ end</code></p>
         
             
         <h3>Routine tags</h3>
+        
+        <p>The following tags are available for comments immediately before or after a routine header.</p>
         
         <table class="small">
           <thead>
@@ -612,7 +640,11 @@ end</code></p>
 
         <h3>Attributes</h3>
         
-        <p>Attributes for tags that allow them (i.e. the "param" and "keyword" tags). The rst format separates attributes with a comma. If you need to use a comma in the value of the the attributes, use quotation marks for grouping the the value together. For example: <code class=listing>vertices: in, required, type="fltarr(2, n)"</code></p>
+        <p>Attributes for tags that allow them (i.e. the "param" and "keyword" tags). The rst format separates attributes with a comma. If you need to use a comma in the value of the the attributes, either escape the comma with a "\" or use quotation marks for grouping the the value together. For example: <code class="listing">; :Params:
+;    fwd : out, optional, type=fltarr(2\, nSegments)
+;       streamline in the forward direction
+;    bwd : out, optional, type="fltarr(2, nSegments)"
+;       streamline in the backward direction</code></p>
         
         <table class="small">
           <thead>
@@ -674,8 +706,10 @@ end</code></p>
         </table>      
         
         
-        <h2>Headers in IDL format</h2>
+        <h2 id="idl-headers">Headers in IDL format</h2>
 
+        <p>The following headers are available in an IDL style format.</p>
+        
         <table class="small">
           <thead>
             <tr>
@@ -686,7 +720,7 @@ end</code></p>
           <tbody>
             <tr>
               <td class="name">NAME</td>
-              <td>Name of the routine. Not used by IDLdoc.</td>
+              <td>Name of the routine. Can be present, but is not used by IDLdoc.</td>
             </tr>
 
             <tr>
@@ -701,7 +735,7 @@ end</code></p>
 
             <tr>
               <td class="name">CALLING SEQUENCE</td>
-              <td>Calling syntax for the routine. Not used by IDLdoc.</td>
+              <td>Calling syntax for the routine. Can be present, but is not used by IDLdoc.</td>
             </tr>
 
             <tr>
@@ -766,7 +800,7 @@ July 1994 Describe modifications done on this date </code></td>
           </tbody>
         </table>            
         
-        <h2>Markup styles</h2>
+        <h2 id="markup-styles">Markup styles</h2>
         
         <p>There are two markup styles that are used to format text (such as file/routine comments or the values of nearly any tag). The "verbatim" style simply copies exactly what is present. The "rst" style does two things: <ol>
           <li>blank lines make paragraphs</li>
