--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -15,6 +15,7 @@ dl.file_listing { margin-left: 1em; }
 
 /* titles */
 h1, h2, h3, h4 { font-weight:normal; color: #900000; margin-top: 1.5em; }
+h4 { margin-bottom: 0.25em; }
 .center { margin-left: auto; margin-right: auto; }
 .small { font-family: Verdana, Helvetica, sans-serif; font-size: 90%; }
 .smaller { font-family: Verdana, Helvetica, sans-serif; font-size: 80%; }
@@ -77,6 +78,9 @@ table td { vertical-align: top; }
 form table td { vertical-align: middle; }
 table.attribute p { margin: 0; }
 table td.name { font-style: normal; padding-right: 1.5em; }
+ul.fieldslist { padding-top: 0; color: #909090; }
+ul.fieldslist li { margin-bottom: 0.25em; }
+span.fieldname { color: #000000; }
 
 /* header/navbar styles */
 div.header { padding: 2em 2em 0 2em; background: #71900B; border-bottom: 2px #384806 solid; }
