--- a/idldoc/src/templates/header.tt
+++ b/idldoc/src/templates/header.tt
@@ -52,17 +52,17 @@
 [% END %]
 
 [% IF current_template eq 'profile' %]
-<p class="localnavbar smallest"><a href="" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp; summary &nbsp;&nbsp;&nbsp; class &nbsp;&nbsp;&nbsp; fields &nbsp;&nbsp;&nbsp; <a href="#routine-details">routine details</a> &nbsp;&nbsp;&nbsp; <a href="#attributes">file attributes</a></p>
+<p class="localnavbar smallest">[% IF ~nonavbar %]<a href="" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp;[% END %] summary &nbsp;&nbsp;&nbsp; class &nbsp;&nbsp;&nbsp; fields &nbsp;&nbsp;&nbsp; <a href="#routine-details">routine details</a> &nbsp;&nbsp;&nbsp; <a href="#attributes">file attributes</a></p>
 [% END %]
 
 [% IF current_template eq 'warnings' %]
-<p class="localnavbar smallest"><a href="" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> [% IF n_todos gt 0 %] &nbsp;&nbsp;&nbsp; <a href="#todo">todo</a>[% END %] [% IF n_bugs gt 0 %]&nbsp;&nbsp;&nbsp; <a href="#bugs">bugs</a>[% END %] [% IF n_undocumented gt 0 %] &nbsp;&nbsp;&nbsp; <a href="#undocumented">undocumented</a>[% END %] [% IF n_obsolete gt 0 %] &nbsp;&nbsp;&nbsp; <a href="#obsolete">obsolete</a>[% END %] [% IF statistics %] &nbsp;&nbsp;&nbsp; <a href="#statistics">statistics</a>[% END %] [% IF requires_version ne '' %]&nbsp;&nbsp;&nbsp; <a href="#requires">requires</a>[% END %]</p>
+<p class="localnavbar smallest">[% IF ~nonavbar %]<a href="" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a>[% END %][% IF n_todos gt 0 %] &nbsp;&nbsp;&nbsp; <a href="#todo">todo</a>[% END %] [% IF n_bugs gt 0 %]&nbsp;&nbsp;&nbsp; <a href="#bugs">bugs</a>[% END %] [% IF n_undocumented gt 0 %] &nbsp;&nbsp;&nbsp; <a href="#undocumented">undocumented</a>[% END %] [% IF n_obsolete gt 0 %] &nbsp;&nbsp;&nbsp; <a href="#obsolete">obsolete</a>[% END %] [% IF statistics %] &nbsp;&nbsp;&nbsp; <a href="#statistics">statistics</a>[% END %] [% IF requires_version ne '' %]&nbsp;&nbsp;&nbsp; <a href="#requires">requires</a>[% END %]</p>
 [% END %]
 
 [% IF current_template eq 'help' %]
-<p class="localnavbar smallest"><a href="" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp; <a href="#calling">calling</a> &nbsp;&nbsp;&nbsp; <a href="#commenting">commenting</a> &nbsp;&nbsp;&nbsp; <a href="#tags">tags</a> &nbsp;&nbsp;&nbsp; <a href="#customizing">customizing</a></p>
+<p class="localnavbar smallest">[% IF ~nonavbar %]<a href="" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp;[% END %] <a href="#calling">calling</a> &nbsp;&nbsp;&nbsp; <a href="#commenting">commenting</a> &nbsp;&nbsp;&nbsp; <a href="#tags">tags</a> &nbsp;&nbsp;&nbsp; <a href="#customizing">customizing</a></p>
 [% END %]
 
 [% IF current_template eq 'overview' %]
-<p class="localnavbar smallest"><a href="" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp; <a href="#directories">directories</a> &nbsp;&nbsp;&nbsp; <a href="#statistics">project statistics</a> </p>
+<p class="localnavbar smallest">[% IF ~nonavbar %]<a href="" target="_top">single page</a> | <a href="[% relative_root %]index.html" target="_top">use frames</a> &nbsp;&nbsp;&nbsp;[% END %]<a href="#directories">directories</a> &nbsp;&nbsp;&nbsp; <a href="#statistics">project statistics</a> </p>
 [% END %]
