--- a/idldoc/src/resources/listing.css
+++ b/idldoc/src/resources/listing.css
@@ -10,7 +10,7 @@ body { font-family: Helvetica, sans-serif; font-size: 10pt; margin: 0; }
 h1 { font-size: 100%; margin-bottom: 0.5em; padding-left: 0.5em; }
 h1 span { 
   font-size: 80%; 
-  font-samily: Verdana, Helvetica, sans-serif; 
+  font-family: Verdana, Helvetica, sans-serif; 
   font-weight: normal; 
   color: #606060;
 }
