--- a/idldoc/src/templates/footer.tt
+++ b/idldoc/src/templates/footer.tt
@@ -1,6 +1,6 @@
 <div class="footer">
 
-  <table class="smaller">
+  <table class="smaller" summary="footer">
     <tr>
       <td class="left">Produced by IDLdoc [% idldoc_version %] on [% date %]</td>
       <td class="right"><a target="_top" href="http://wiki.idldev.com/index.php?title=IDLdoc">For updates, feature requests, and bug reports</a></td>
