--- a/idldoc/src/templates/index.tt
+++ b/idldoc/src/templates/index.tt
@@ -5,6 +5,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=[% charset %]"/>
     <title>[% title %]</title>
 
     <link rel="shortcut icon" href="./idldoc-resources/idldoc.ico"/>
